--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,2 @@
-Click==7.0
-Flask==1.1.1
-Flask-SQLAlchemy==2.4.0
-itsdangerous==1.1.0
-Jinja2==2.10.1
-MarkupSafe==1.1.1
-pkg-resources==0.0.0
-SQLAlchemy==1.3.5
-Werkzeug==0.15.4
+Flask
+Flask-SQLAlchemy
